# active-object

./: .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  workspace.code-workspace
example/: ao_counter.cc  ao_counter.h  ascii.cc  ascii.h  main.cc  plain_counter.cc  plain_counter.h
src/ao/: method.h  method_object.h  scheduler.cc  scheduler.h
